# Avir

./: .gitignore  CMakeLists.txt  README.md  builder.sh  hash.cpp  hash.h  installer.sh  main.cpp  run.sh
in/: file1.txt  file2.txt
scanme/: malware1.txt  malware2.txt  malwarelist.txt  safe1.txt
src/: hash.cpp  hash.h  main.cpp  scan.cpp  scan.h
